<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Contactzilla Sync</string>
    <string name="account_invalid">Account does not exist (anymore)</string>
    <string name="account_type" translatable="false">com.atomicasoftware.contactzillasync</string>
    <string name="account_type_address_book" translatable="false">com.atomicasoftware.contactzillasync.addressbook</string>
    <string name="account_title_address_book">Contactzilla Address book</string>
    <string name="account_prefs_use_app">Don\'t change the account here! Directly use the app to manage accounts instead.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_deny">Cancel</string>
    <string name="dialog_enable">Enable</string>
    <string name="field_required">This field is required</string>
    <string name="help">Help</string>
    <string name="navigate_up">Navigate up</string>
    <string name="optional_label">* optional</string>
    <string name="options_menu">Options menu</string>
    <string name="share">Share</string>
    <string name="sync_started">Synchronization started/enqueued</string>
    <string name="database_destructive_migration_title">Database corrupted</string>
    <string name="database_destructive_migration_text">All accounts have been removed locally.</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_status">Low-priority status messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like certain invalid files</string>
    <string name="notification_channel_sync_io_errors">Network and I/O errors</string>
    <string name="notification_channel_sync_io_errors_desc">Timeouts, connection problems, etc. (often temporary)</string>
    <string name="intro_slogan1">Contactzilla Sync</string>
    <string name="intro_slogan2">All contacts. Everywhere.</string>
    <string name="intro_battery_title">Regular sync intervals</string>
    <string name="intro_battery_text">For synchronization at regular intervals, %s must be allowed to run in the background. Otherwise, Android may pause synchronization at any time.</string>
    <string name="intro_battery_text_direct">%s needs to run in the background to keep your contacts synchronized. Please allow background running to ensure automatic sync works properly.</string>
    <string name="intro_battery_allow_background">Allow Background Running</string>
    <string name="intro_battery_exempted">Background running is enabled! Your contacts will sync automatically.</string>
    <string name="intro_battery_manual_instruction">If the dialog doesn\'t appear, you can manually allow background running in battery settings.</string>
    <string name="intro_battery_dont_show">I don\'t need regular sync intervals.*</string>
    <string name="intro_autostart_title">%s compatibility</string>
    <string name="intro_autostart_text">%s also needs autostart permission on %s devices. You may need to enable this manually in your device settings.</string>
    <string name="intro_autostart_more_info">More Information</string>
    <string name="intro_autostart_dont_show">I have done the required settings. Don\'t remind me anymore.*</string>
    <string name="intro_leave_unchecked">* Leave unchecked to be reminded later. Can be reset in app settings / %s.</string>
    <string name="intro_more_info">More information</string>
    <string name="intro_tasks_jtx">jtx Board</string>
    <string name="intro_tasks_jtx_info"><![CDATA[Supports sync of Tasks, Journals and Notes.]]></string>
    <string name="intro_tasks_title">Tasks support</string>
    <string name="intro_tasks_text1">If tasks are supported by your server, they can be synchronized with a supported tasks app:</string>
    <string name="intro_tasks_opentasks">OpenTasks</string>
    <string name="intro_tasks_opentasks_info">Doesn\'t seem to be developed anymore – not recommended.</string>
    <string name="intro_tasks_tasks_org">Tasks.org</string>
    <string name="intro_tasks_tasks_org_info"><![CDATA[Some features <a href="https://www.davx5.com/faq/tasks/advanced-task-features">are not supported</a>.]]></string>
    <string name="intro_tasks_no_app_store">No app store available</string>
    <string name="intro_tasks_dont_show">I don\'t need tasks support.*</string>
    <string name="intro_open_source_title">Open-source software</string>
    <string name="intro_open_source_text">We\'re happy that you use %s, which is open-source software. Development, maintenance and support are hard work. Please consider contributing (there are many ways) or a donation. It would be highly appreciated!</string>
    <string name="intro_open_source_details">How to contribute/donate</string>
    <string name="intro_open_source_dont_show">Don\'t remind me for</string>
    <plurals name="intro_open_source_dont_show_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <string name="intro_next">Next</string>
    <string name="permissions_title">Permissions</string>
    <string name="permissions_text">%s requires permissions to work properly.</string>
    <string name="permissions_essential_title">Essential Permissions</string>
    <string name="permissions_essential_text">%s needs these permissions to sync your contacts and run properly. Please grant them to continue.</string>
    <string name="permissions_grant_essential">Grant Essential Permissions</string>
    <string name="permissions_allow_background_running">Allow Background Running</string>
    <string name="permissions_all_granted">All permissions granted! You\'re ready to go.</string>
    <string name="permissions_background_settings_unavailable">Background settings not available</string>
    <string name="permissions_contacts_required">Contact permissions are required for %s to sync your contacts. Please grant them in Settings.</string>
    <string name="permissions_all_title">All of the below</string>
    <string name="permissions_all_status_off">Use this to enable all features (recommended)</string>
    <string name="permissions_all_status_on">All permissions granted</string>
    <string name="permissions_contacts_title">Contacts permissions</string>
    <string name="permissions_contacts_status_off">No contact sync (not recommended)</string>
    <string name="permissions_contacts_status_on">Contact sync possible</string>
    <string name="permissions_calendar_title">Calendar permissions</string>
    <string name="permissions_calendar_status_off">No calendar sync (not recommended)</string>
    <string name="permissions_calendar_status_on">Calendar sync possible</string>
    <string name="permissions_notification_title">Notification permission</string>
    <string name="permissions_notification_status_off">Notifications disabled (not recommended)</string>
    <string name="permissions_notification_status_on">Notifications enabled</string>
    <string name="permissions_jtx_title">jtx Board permissions</string>
    <string name="permissions_opentasks_title">OpenTasks permissions</string>
    <string name="permissions_tasksorg_title">Tasks permissions</string>
    <string name="permissions_tasks_status_off">No task sync</string>
    <string name="permissions_tasks_status_on">Task sync possible</string>
    <string name="permissions_autoreset_title">Keep permissions</string>
    <string name="permissions_autoreset_status_off">Permissions may be reset automatically (not recommended)</string>
    <string name="permissions_autoreset_status_on">Permissions won\'t be reset automatically</string>
    <string name="permissions_autoreset_instruction">Click Permissions > uncheck \"Remove permissions if app isn\'t used\"</string>
    <string name="permissions_app_settings_hint">If a switch doesn\'t work, use app settings / Permissions.</string>
    <string name="permissions_app_settings">App settings</string>
    <string name="wifi_permissions_label">WiFi SSID permissions</string>
    <string name="wifi_permissions_intro">To be able to access the current WiFi name (SSID), these conditions must be met:</string>
    <string name="wifi_permissions_location_permission">Precise location permission</string>
    <string name="wifi_permissions_location_permission_on">Location permission granted</string>
    <string name="wifi_permissions_location_permission_off">Location permission denied</string>
    <string name="wifi_permissions_background_location_permission">Background location permission</string>
    <string name="wifi_permissions_background_location_permission_label">Allow all the time</string>
    <string name="wifi_permissions_background_location_permission_on">Location permission set to: %s</string>
    <string name="wifi_permissions_background_location_permission_off">Location permission not set to: %s</string>
    <string name="login_base_url_description">Base URL</string>
    <string name="login_base_url_title">Base URL</string>
    <string name="login_user_name_description">Username</string>
    <string name="login_user_name_title">Username</string>
    <string name="login_password_title">Password</string>
    <string name="login_account_name_description">Account name</string>
    <string name="login_account_name_title">Account name</string>
    <string name="login_base_url_title_2">Base URL (Account 2)</string>
    <string name="login_user_name_title_2">Username (Account 2)</string>
    <string name="login_password_title_2">Password (Account 2)</string>
    <string name="login_account_name_title_2">Account name (Account 2)</string>
    <string name="login_base_url_title_3">Base URL (Account 3)</string>
    <string name="login_user_name_title_3">Username (Account 3)</string>
    <string name="login_password_title_3">Password (Account 3)</string>
    <string name="login_account_name_title_3">Account name (Account 3)</string>
    <string name="login_base_url_title_4">Base URL (Account 4)</string>
    <string name="login_user_name_title_4">Username (Account 4)</string>
    <string name="login_password_title_4">Password (Account 4)</string>
    <string name="login_account_name_title_4">Account name (Account 4)</string>
    <string name="login_base_url_title_5">Base URL (Account 5)</string>
    <string name="login_user_name_title_5">Username (Account 5)</string>
    <string name="login_password_title_5">Password (Account 5)</string>
    <string name="login_account_name_title_5">Account name (Account 5)</string>
    <string name="proxy_type_title">Proxy type (System: -1, None: 0, HTTP: 1, Socks: 2)</string>
    <string name="proxy_host_title">Proxy host</string>
    <string name="proxy_port_title">Proxy port</string>
    <string name="distrust_system_certs_title">Distrust system certificates</string>
    <string name="default_sync_interval">Default sync interval</string>
    <string name="organization">Organization name</string>
    <string name="managed_by_title">Managed By</string>
    <string name="managed_by_description">Organization or entity managing the account settings (defaults to "your organization")</string>
    <string name="wifi_only_title">Sync over WiFi only</string>
    <string name="wifi_only_ssids_title">WiFi SSID restriction</string>
</resources>